app/src/frontend/map/parcel-switcher.css
.parcel-theme {
    filter: grayscale(100%) invert(1);
}

.parcel-theme {
    filter: none;
}

.parcel-switcher {
    z-index: 1000;
    position: absolute;
    top: 117px;
    right: 10px;
    float: right;
    background: white;
    border-radius: 4px;
}
.parcel-switcher .btn {
    margin: 0;
    min-width: 280px;
}
.parcel-switcher.night .btn {
    color: #fff;
    background-color: #343a40;
    border-color: #343a40;
}
.parcel-switcher.night .btn:hover {
    color: #343a40;
    background-color: transparent;
    background-image: none;
    border-color: #343a40;
}
@media (max-width: 990px){
    .parcel-switcher {
        visibility: hidden;
    }
}

